# hoop

./: .dockerignore  .env.sample  .gitignore  .goreleaser.yaml  .mcp.json  AGENTS.md  CLA.md  CLAUDE.md  CONNECTIONS_PATCH_ENDPOINTS.md  DEV.md  DEVELOPMENT.md  Dockerfile  Dockerfile.agent-ocr  Dockerfile.agent-ocr-gpu  Dockerfile.amd64  Dockerfile.dev  Dockerfile.dock  Dockerfile.localbuild  Dockerfile.tools  H1-2026-review.md  LICENSE  Makefile  PRD-intercom-email-tracking.md  Q3-roadmap.md  README.md  configure-role-audit.md  configure-role-gaps.md  feature-spec.md  go.work  go.work.oss.sum  go.work.sum  hoop_query_execution_analysis.md  icebreaker.html  package-lock.json
.claude/: README.md  settings.json
.claude/hooks/: gofmt.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: agent-ocr-build.yml  agent-tools-build.yml  auto-deploy.yml  auto-release.yml  breaking-change-check.yml  changelog-preview.yml  cla.yml  deploy-by-app.yml  deploy.yml  dev-release.yml  helm-charts.yml  linear-sync.yml  migration-check.yml  pr-label-check.yml  pullrequest-release.yml  pullrequest.yml  release-tools.yml  release.yml  release_test.yml  trigger-publish.yml
_libhoop/: _libhoop  core.go  go.mod  go.sum  guardrails.go  libhoop.go
_libhoop/aianalyzer/: aianalyzer.go
_libhoop/llog/: llog.go
_libhoop/redactor/: types.go
agent/: README.md  agent.go  const.go  exec.go  go.mod  go.sum  hook.go  hook_test.go  main.go  monitoring.go  mssql.go  mysql.go  postgres.go  proc.go  proc_unix.go  proc_windows.go  tcp.go  terminal-exec.go  terminal.go
agent/autoregister/: autoregister.go
agent/cmd/: main.go
agent/config/: config.go
agent/controller/: agent.go  agent_connenv_test.go  const.go  gcpvertex.go  hook.go  hook_test.go  httpproxy.go  httpproxy_aianalyzer.go  httpproxy_test.go  mongodb.go  monitoring.go  mssql.go  mysql.go  oracle.go  packetqueue.go  packetqueue_test.go  postgres.go  ssh.go  ssm.go  tcp.go  terminal-exec.go  terminal.go
agent/dcm/: config.hcl  dcm.go  dcm_test.go  provisioner.go  provisioner_test.go  statements.go  statements_test.go
agent/dlp/: gcp.go  gcp_test.go  pg.go  pg_test.go  types.go
agent/guardrails/: guardrails.go  guarrails.go
agent/hook/: client.go  client_list.go  hook.go  loader.go
agent/integration/: mongodb_concurrency_test.go  mongodb_test.go  mssql_concurrency_test.go  mssql_jdbc_test.go  mssql_test.go  mysql_concurrency_test.go  mysql_test.go  postgres_concurrency_test.go  postgres_test.go  ssh_base_test.go  ssh_test.go
agent/main/: main.go
agent/mongoproxy/: auth.go  auth_test.go  buf.go  proxy.go  scram.go  tls.go
agent/mssql/: buf.go  net.go  proxy.go
agent/mysql/: proxy.go
agent/pg/: dlp.go  packet.go  packet_test.go  pg.go
agent/pgproxy/: auth.go  buf.go  cancel.go  dlp.go  dlp_test.go  procmanager.go  proxy.go  tls.go
agent/rds/: iam_rds.go
agent/secretsmanager/: aws.go  envjson.go  secretsmanager.go  vault.go  vault_test.go
agent/terminal/: envvar.go  server-exec.go  unix.go  unix_windows.go
agent/version/: version.go
agentrs/: Cargo.toml  README.md
agentrs/examples/: generate_cert.rs  gw.rs  integration_example.rs  rdp_caps_probe.rs
agentrs/src/: client.rs  conf.rs  gw.rs  headers.rs  lib.rs  listener.rs  logio.rs  main.rs  protocol.rs  proxy.rs  rdp_proxy.rs  run.rs  session.rs  tasks.rs  tls.rs  token.rs  transport.rs  x509.rs
agentrs/src/agent/: listeners.rs  mod.rs
agentrs/src/certs/: mod.rs  x509.rs
agentrs/src/gateway/: gateway.rs
agentrs/src/logio/: logio.rs  mod.rs
agentrs/src/piigate/: analyze.rs  bands.rs  canvas.rs  capabilities.rs  config.rs  framing.rs  metrics.rs  mod.rs  ocr.rs  presidio.rs  report.rs  rewrite.rs  testpdu.rs  tests.rs
agentrs/src/proxy/: proxy.rs
agentrs/src/rdp/: mod.rs  proxy.rs
agentrs/src/rdpproxy/: mod.rs  rdpproxy.rs
agentrs/src/sessions/: header.rs
agentrs/src/tasks/: mod.rs  tasks.rs
agentrs/src/transport/: transport.rs
agentrs/src/ws/: client.rs  config.rs  control.rs  message.rs  message_types.rs  mod.rs  proxy.rs  rdp.rs  rdp_message_processor.rs  server.rs  session.rs  stream.rs  types.rs
client/: client.go  go  go.mod  go.sum  hoop.go  main.go
client/agentcontroller/: README.md  apicontroller.go  (+3 more)
common/: Makefile  go.mod  go.sum
docs/: poc-jit-native-client-credentials.md  poc-native-client-credentials.md  prd-ssh-certificate-authentication.md
domain/: Makefile  agent.go  connection.go  context.go  core.go  go.mod  go.sum  secret.go  transport.go
gateway/: README.md  go.mod  go.sum  grpc_server.go  http_server.go  main.go
k8s/: deployment-agent.yaml  deployment-gw.yaml  ingresses.yaml  services.yaml
licenses/: manual-binaries.toml
plugins/: go.mod
proto/: Makefile  const.go  go.mod  go.sum  transport.pb.go  transport.proto  transport_grpc.pb.go  types.go
scripts/: brew-recipe.sh  check-migration-safety.sh  cleanup-org.sh  create_rdp_connection.sh  create_rdp_credentials.sh  create_ssm_connection.sh  create_ssm_credentials.sh  deploy-all.sh  deploy-by-app.sh  format-changelog.sh  generate-changelog.sh  hoopwrapper  install-cli.sh  install-rust.sh  install.sh  list-conn-for-eviction.sh  local-spiffe-agent.sh  local-spiffe-kubernetes.sh  local-teardown-kubernetes.sh  merge-artifacts.sh  org-cleanup.go  publish-release.sh  publish-tools.sh  run-client-dev.sh  run-dev.sh  run-with-idp-provider.sh  setup-release-labels.sh  setupdb.sql  standalone-e2e.sh
trayapp/: FyneApp.toml  activationpolicy  go.mod  go.sum  main.go
tunnel/: .gitignore  README.md  go.mod  go.sum
webapp/: .cursorignore  .dockerignore  .editorconfig  .env.sample  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  connections_original.cljs  docker-compose.yml  package-lock.json  package.json  postcss.config.js  shadow-cljs.edn  tailwind.config.js
webapp_v2/: .env.sample  CLAUDE.md  CLJS_PATTERNS.md  COMPONENTS.md  CONTEXT_MIGRATION.md  MIGRATION_CHECKLIST.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
(+2535 files in other folders)
