[package]
name = "agentrs"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = "0.3"
futures-sink = "0.3"
tokio = { version = "1.45", features = ["signal", "net", "io-util", "time", "rt", "rt-multi-thread", "sync", "macros", "parking_lot", "fs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
typed-builder = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "stream", "http2", "system-proxy", "socks"] }
async-trait = "0.1"
tower = { version = "0.5", features = ["timeout"] }
twoway = "0.2.2"
parking_lot = "0.12"
pin-project-lite = "0.2"

hyper = "1.6"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "ws", "query", "tracing", "tower-log"] }
axum-extra = { version = "0.10", features = ["query", "async-read-body", "typed-header"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tungstenite = "0.26" # Should be the same version as `axum` (we perform error downcasting for better error reporting)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] } # Should use the same version of tungstenite as `axum`
http-body-util = "0.1"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
base64 = "0.22.1"
url = "2.5.4"
time = { version = "0.3", default-features = false, features = ["std", "serde", "formatting"] }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde-querystring = "0.3.0"
jsonwebtoken = "=7.2"
once_cell = "1.19.0"
bitflags = "2.9"


camino = { version = "1.1", features = ["serde1"] }
cfg-if = "1.0"

bytes = "1.10.1"
anyhow = "1"
futures = "0.3.31"
futures-util = "0.3.31"

ironrdp-connector = { version = "0.5" }
ironrdp-acceptor = { version = "0.5" }
ironrdp-pdu = { version = "0.5", features = ["std"] }
ironrdp-core = { version = "0.1", features = ["std"] }
ironrdp-rdcleanpath = "0.1"
ironrdp-tokio = "0.5"
rustls = "0.22"
webpki-roots = "0.25"
rcgen = "0.12"
rustls-native-certs = "0.7"
secrecy = "0.8"

picky = { version = "7.0.0-rc.15", default-features = false, features = ["jose", "x509", "pkcs12", "time_conversion"] }
zeroize = { version = "1.8", features = ["derive"] }
multibase = "0.9"
argon2 = { version = "0.5", features = ["std"] }
x509-cert = { version = "0.2", default-features = false, features = ["std"] }

tap = "1.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"