[package]
name = "agentrs"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = "0.3.0"
futures-sink = "0.3.0"
tokio = { version = "1.45.0", features = ["signal", "net", "io-util", "time", "rt", "rt-multi-thread", "sync", "macros", "parking_lot", "fs"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12", "ring"] }
typed-builder = "0.21.0"
async-trait = "0.1.0"
tower = { version = "0.5.0", features = ["timeout"] }
parking_lot = "0.12.0"
pin-project-lite = "0.2.0"

hyper = "1.6.0"
hyper-util = { version = "0.1.0", features = ["tokio", "server", "server-auto"] }
axum = { version = "0.8.0", default-features = false, features = ["http1", "json", "ws", "query", "tracing", "tower-log"] }
tungstenite = "0.26.0" # Should be the same version as `axum` (we perform error downcasting for better error reporting)
tokio-tungstenite = { version = "0.26.0", features = ["rustls-tls-native-roots"] } # Should use the same version of tungstenite as `axum`
http-body-util = "0.1.0"

uuid = { version = "1.17.0", features = ["v4", "serde"] }
base64 = "0.22.1"
url = "2.5.4"
time = { version = "0.3.0", default-features = false, features = ["std", "serde", "formatting"] }


# Serialization
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
serde_urlencoded = "0.7.0"
once_cell = "1.19.0"
bitflags = "2.9.0"


camino = { version = "1.1.0", features = ["serde1"] }
cfg-if = "1.0.0"

bytes = "1.10.1"
anyhow = "1.0.0"
futures = "0.3.31"
futures-util = "0.3.31"

ironrdp-connector = { version = "0.5.0" }
ironrdp-acceptor = { version = "0.5.0" }
ironrdp-pdu = { version = "0.5.0", features = ["std"] }
ironrdp-core = { version = "0.1.0", features = ["std"] }
ironrdp-tokio = "0.5.0"
rustls = "0.22.0"
rcgen = "0.12.0"

picky = { version = "7.0.0-rc.15", default-features = false, features = ["jose", "x509", "pkcs12", "time_conversion"] }
zeroize = { version = "1.8.0", features = ["derive"] }
multibase = "0.9.0"
x509-cert = { version = "0.2.0", default-features = false, features = ["std"] }

tap = "1.0.0"
tracing = "0.1.0"
tracing-subscriber = "0.3.0"
toml = "0.8.0"
